--- a/src/components/blocks/LogoSlider/styles.module.scss
+++ b/src/components/blocks/LogoSlider/styles.module.scss
@@ -2,6 +2,7 @@
 
 .logoSliderBlock {
   padding: 7.4rem 0 10rem;
+  overflow-x: hidden;
 }
 .heading {
   font-size: 3.2rem;
