--- a/src/components/blocks/TestimonialSlider/styles.module.scss
+++ b/src/components/blocks/TestimonialSlider/styles.module.scss
@@ -2,6 +2,7 @@
 
 .cardsOverflowSlider {
   padding: 9.5rem 0 11.5rem;
+  overflow-x: hidden;
   background-color: $alabaster;
 }
 .heading {
